# panel_dashboard

./: .gitignore  README.md  create_folders.bat  pyproject.toml  run_app.bat
src/: app.py  state.py
src/components/charts/: performance.py
src/models/: factory.py
src/panel_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/views/: fund_overview.py  portfolio_level.py  split_view.py
