[project]
name = "panel-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hvplot>=0.11.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "panel>=1.7.2",
    "watchfiles>=1.1.0",
]

[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["hvplot.pandas"]